--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
     margin-right: 10px;
-    justify-content: center;
+    /* justify-content: center; */
         margin-top: 10px;
         
  }
