--- a/style.css
+++ b/style.css
@@ -112,7 +112,7 @@ header img {
 font-size: 24px;
  font-weight: bold;
 text-align: center;
-color: #333;
+color: black;
  margin-top: 20px;
 }
 
@@ -133,3 +133,4 @@ padding: 10px 20px;
  .artpagelink:hover {
     text-decoration: underline !important;
  }
+
